@@ -1,7 +1,14 @@
 import common.DBCatalog;
+import common.QueryPlanBuilder;
+import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
 import java.util.Objects;
+import net.sf.jsqlparser.JSQLParserException;
 import net.sf.jsqlparser.expression.Alias;
 import net.sf.jsqlparser.parser.CCJSqlParserUtil;
 import net.sf.jsqlparser.schema.Table;
@@ -22,45 +29,47 @@ public class ParserExample {
   private final Logger logger = LogManager.getLogger();
 
   @Test
-  public void parserExampleTest() {
-    try {
-      ClassLoader classLoader = ParserExample.class.getClassLoader();
-      String path = Objects.requireNonNull(classLoader.getResource("samples/input")).getPath();
-      DBCatalog.getInstance().setDataDirectory(path + "/db");
+  public void parserExampleTest() throws IOException, JSQLParserException, URISyntaxException {
+    ClassLoader classLoader = P1UnitTests.class.getClassLoader();
 
-      String queriesFile =
-          Objects.requireNonNull(classLoader.getResource("samples/input/queries.sql")).getPath();
+    URI resourceUri = Objects.requireNonNull(classLoader.getResource("samples/input")).toURI();
 
-      String str = Files.readString(Path.of(queriesFile));
+    Path resourcePath = Paths.get(resourceUri);
 
-      logger.info(str);
+    DBCatalog.getInstance().setDataDirectory(resourcePath.resolve("db").toString());
 
-      Statements statements = CCJSqlParserUtil.parseStatements(str);
+    URI queriesUri =
+        Objects.requireNonNull(classLoader.getResource("samples/input/queries.sql")).toURI();
+    Path queriesFilePath = Paths.get(queriesUri);
 
-      for (Statement statement : statements.getStatements()) {
-        logger.info("Read statement: " + statement);
+    Statements statements = CCJSqlParserUtil.parseStatements(Files.readString(queriesFilePath));
 
-        Select select = (Select) statement;
-        PlainSelect plainSelect = (PlainSelect) select.getSelectBody();
+    QueryPlanBuilder queryPlanBuilder = new QueryPlanBuilder();
 
-        Table fromItem = (Table) plainSelect.getFromItem();
+    for (Statement statement : statements.getStatements()) {
+      logger.info("Read statement: " + statement);
 
-        logger.info("Select body is " + select.getSelectBody());
-        logger.info("From item is " + fromItem);
+      Select select = (Select) statement;
+      PlainSelect plainSelect = (PlainSelect) select.getSelectBody();
 
-        Alias alias = fromItem.getAlias();
-        String name = fromItem.getName();
+      Table fromItem = (Table) plainSelect.getFromItem();
 
-        logger.info("Alias: " + alias);
-        logger.info("Name: " + name);
+      logger.info("Select body is " + select.getSelectBody());
+      logger.info("From item is " + fromItem);
 
+      Alias alias = fromItem.getAlias();
+      String name = fromItem.getName();
+
+      logger.info("Alias: " + alias);
+      logger.info("Name: " + name);
+
+      List<Join> joins = plainSelect.getJoins();
+
+      if (joins != null) {
         for (Join join : plainSelect.getJoins()) {
           // Process joins..
         }
       }
-    } catch (Exception e) {
-      System.err.println("Exception occurred during parsing");
-      logger.error(e.getMessage());
     }
   }
 }
